--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,6 @@
 <div class='ui menu'>
-  <a class="active item">
-  <% link_to boards_path %>
-   Home
-  </a>
-  <a class='item'>
-  *Lists*
-  </a>
-  <a class='item'>
-  *Tasks*
+  <a href="/boards" class="item">
+  Home 
   </a>
   <div class="right menu">
     <a class="ui item">*Devise/Logout*</a>
