--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Lists#new</h1>
-<p>Find me in app/views/lists/new.html.erb</p>
+<h1><i>Create a New List</i><i class="book icon"></i></h1>
+<%= form_with(model: [@board, @list], local: true, class: "ui form") do |f| %>
+  <div class="field" >
+    <%= f.label :name %>
+    <%= f.text_field :name, required: true, placeholder: "List Name" %>
+    </div> 
+    <div class="field" >
+    <%= f.label :date_created %>
+    <%= f.date_field :date_created, required: true, placeholder: "Date Created" %>
+  </div>
+  <%= f.submit nil, class: "ui teal button" %>
+  <% end %>
