--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -2,7 +2,7 @@
 <div class="center_content">
 <h1><i class="user icon"></i><i><b>Your Boards</b></i></h1>
 <br />
-<%= link_to "Add a New Board", new_board_path, class: "ui small basic button grey" %>
+<%= link_to "Add a New Board", new_board_path, class: "ui small button grey" %>
 </div>
 <hr />
 <br />
@@ -14,17 +14,17 @@
         <ol>
           <div class="board_show">
         
-          <button class="ui small basic button grey">
+          <button class="ui small button black">
             <i class="book icon"></i>
               <%= link_to board.name, board_path(board) %>
             </button>
         
-            <button class="ui small basic button teal">      
+            <button class="ui small button teal">      
               <i class="edit icon"></i>
                 <%= link_to "Edit this Board", edit_board_path(board)%>
             </button>
             
-            <button class= "ui small basic button red">
+            <button class= "ui small button red">
               <i class="ban icon"></i>
             <%= link_to "Delete Board", board_path(board), method: :delete  %>
             </button>
