--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -2,7 +2,7 @@
 <div class="center_content">
 <h1><i class="user icon"></i><i><b>Your Boards</b></i></h1>
 <br />
-<%= link_to "Add a New Board", new_board_path, class: "ui small button grey" %>
+<%= link_to "Add a New Board", new_board_path, class: "ui small basic inverted grey button" %>
 </div>
 <hr />
 <br />
