--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <div class='ui menu'>
   <a href="/boards" class="item">
-  Home 
+  <div class="ui basic inverted blue button">Home</div>
   </a>
   <div class="right menu">
-    <a class="ui item">*Devise/Logout*</a>
-</div>
+    <a class="item"><div class="ui basic inverted red button">Devise/Logout</div></a>
+  </div>
 </div>
